Fixing alignment issues.

--- a/app/css/_store.css.scss
+++ b/app/css/_store.css.scss
@@ -113,6 +113,7 @@
       margin-bottom: 0;
       padding-bottom: 10px;
       font-size: 2em;
+      min-height: 71px;
     }
     .date{
       font-size:1.08em;
@@ -127,6 +128,10 @@
       .year{
         font-size: 0.9em;
       }
+    }
+    .description{
+      padding-top:5px;
+      min-height: 100px;
     }
     .image{
       text-align: center;
